@@ -1,3 +1,6 @@
+* #4660: when calling ShareActivity(), allow private, tags, color to be set
+  by putting them in the properties dict, which was previously ignored (smcv)
+
 Snapshot 944c5280b4
 
 * #4585: Watch activity unique names on D-Bus for disappearences, implying
